[package]
name = "wiwi"
version = "0.1.2"
description = "A library, of, Stuff™"
edition = "2021"
authors = ["Meadowsys"]
repository = "https://github.com/Meadowsys/wiwi.git"
license = "MIT"

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.35", features = ["clock"], optional = true }
hashbrown = { version = "0.14.3", optional = true }
parking_lot = { version = "0.12.1", optional = true }
thiserror = { version = "1.0.58", optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
clock-timer = ["dep:chrono", "dep:thiserror"]
debounce = ["dep:chrono"]
h = []
lazy-wrap = ["dep:parking_lot"]
string-pool = ["dep:hashbrown", "lazy-wrap"]

# runtime selection features
tokio = ["dep:tokio"]

[package.metadata.docs.rs]
# https://docs.rs/about/metadata

# all features, and only tokio for runtime feature
features = [
	"clock-timer",
	"debounce",
	"h",
	"lazy-wrap",
	"string-pool",

	"tokio"
]

targets = [
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc"
]
