[package]
name = "wiwi"
version = "0.4.0"
description = "A library, of, Stuff™"
edition = "2021"
authors = ["Meadowsys"]
repository = "https://github.com/Meadowsys/wiwi.git"
license = "MIT"

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.35", features = ["clock"], optional = true }
hashbrown = { version = "0.14.3", optional = true }
parking_lot = { version = "0.12.1", optional = true }
thiserror = { version = "1.0.58", optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
z85 = "3.0.5"

[features]
# Make sure to check README and workflow files too
# Also check below, docs.rs config

clock-timer = ["dep:chrono", "dep:thiserror"]
clock-timer-2 = ["dep:chrono"]
debounce = ["dep:chrono"]
h = []
lazy-wrap = ["dep:parking_lot"]
string-pool = ["dep:hashbrown", "lazy-wrap"]
z85 = ["dep:thiserror"]

# runtime selection features
tokio = ["dep:tokio"]

# config options for certain features
# compiler errors if the feature its for isn't enabled
debounce-dyn-fn = []

[[bench]]
name = "z85"
harness = false

[package.metadata.docs.rs]
# https://docs.rs/about/metadata

# all features, and only tokio for runtime feature
features = [
	"clock-timer-2",
	"debounce",
	"h",
	"lazy-wrap",
	"string-pool",
	"z85",

	"tokio"

	# debounce-dyn-fn not enabled, because it doesn't change docs
]

targets = [
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc"
]
