[package]
name = "wiwi"
version = "0.5.2"
description = "A library, of, Stuff™"
edition = "2021"
authors = ["Meadowsys"]
repository = "https://github.com/meadowsys/wiwi.git"
license = "MIT"
keywords = [
	"decode",
	"encode",
	"hex",
	"z85"
]

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.35", features = ["clock"], optional = true }
hashbrown = { version = "0.14.3", optional = true }
parking_lot = { version = "0.12.1", optional = true }
thiserror = { version = "1.0.58", optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = "0.4.3"
rand = "0.8.5"
z85 = "3.0.5"

[features]
# Make sure to check README and workflow files too
# Also check below, docs.rs config

default = ["base16", "base32", "base64", "z85"]

base16 = ["dep:thiserror", "hex"]
base32 = ["dep:thiserror"]
base64 = ["dep:thiserror"]
clock-timer = ["dep:chrono", "dep:thiserror"]
clock-timer-2 = ["dep:chrono"]
debounce = ["dep:chrono"]
h = ["dep:thiserror"]
hex = ["dep:thiserror"]
lazy-wrap = ["dep:parking_lot"]
string-pool = ["dep:hashbrown", "lazy-wrap"]
ws = []
z85 = ["dep:thiserror"]

# runtime selection features
tokio = ["dep:tokio"]

# config options for certain features
# compiler errors if the feature its for isn't enabled
debounce-dyn-fn = []

[[bench]]
name = "hex-and-z85"
harness = false

[profile.bench]
lto = "thin"

[package.metadata.docs.rs]
# https://docs.rs/about/metadata

# all features, and only tokio for runtime feature
features = [
	"clock-timer-2",
	"debounce",
	"h",
	"hex",
	"lazy-wrap",
	"string-pool",
	"z85",

	"tokio"

	# debounce-dyn-fn not enabled, because it doesn't change docs
]

targets = [
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc"
]
